exports[`test an add more licenses button should be shown when no more licenses are available 1`] = `
<li
  className="btPTmU">
  <span
    className="hOCYEr">
    <span
      className="gFXyaK">
      <div>
        <div
          aria-checked={true}
          aria-label="productId"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="hYNshL"
      src="icon.svg" />
  </span>
  <div
    className="gKpEkz">
    <span
      className="eDGcGX">
      Subscription name
    </span>
    <span
      className="kwOabh">
      <span>
        0/20 remaining
      </span>
    </span>
  </div>
  <span
    className="fLsOLM">
    <a
      className="ifYuxa"
      href="/account/subscriptions/very-unique-sub-id"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;

exports[`test the sitesubscription matches the snapshot 1`] = `
<li
  className="btPTmU">
  <span
    className="hOCYEr">
    <span
      className="gFXyaK">
      <div>
        <div
          aria-checked={true}
          aria-label="productId"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="hYNshL"
      src="icon.svg" />
  </span>
  <div
    className="gKpEkz">
    <span
      className="eDGcGX">
      Subscription name
    </span>
    <span
      className="kwOabh">
      <span>
        6/20 remaining
      </span>
    </span>
  </div>
  <span
    className="fLsOLM">
    <a
      className="ifYuxa"
      href="/account/subscriptions/very-unique-sub-id"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;
